plugins {
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.4'
}

group = 'kr.co.goldenhome'
version = '0.0.1-SNAPSHOT'

allprojects {

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'groovy'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.asciidoctor.jvm.convert'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        asciidoctorExt
    }

    ext {
        snippetsDir = file('build/generated-snippets')
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.slf4j:slf4j-api'
        asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation("org.spockframework:spock-core:2.4-M6-groovy-4.0")
        testImplementation("org.spockframework:spock-spring:2.4-M6-groovy-4.0")

    }

    tasks.named('test') {
        outputs.dir snippetsDir
        useJUnitPlatform()
        jvmArgs '-Xshare:off'
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }

    tasks.named('asciidoctor') {
        sourceDir file('src/docs/asciidoc') // [변경 7]: index.adoc이 있는 경로
        outputDir layout.buildDirectory.dir('docs') // [변경 8]: HTML 출력 경로

        attributes   \
                'user-signup-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-signup',
                'user-login-snippets': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-login',
                'user-check-duplicated': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-check-duplicated',
                'user-email-duplicated': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-email-duplicated',
                'user-withdraw': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-withdraw',
                'user-logout': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-logout',
                'user-fcm': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-fcm',
                'user-notification': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/user-notification',
                'social-login': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/social-login',
                'social-login-callback': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/social-login-callback',
                'token-refresh': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/token-refresh',
                'facility-read': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-read',
                'facility-read-liked': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-read-liked',
                'facility-search': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-search',
                'facility-profile-upload': 'gh-domain/gh-facility/gh-facility-api/build/generated-snippets/facility-profile-upload',
                'resume-write':'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-write',
                'resume-read':'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-read',
                'resume-modify': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-modify',
                'resume-submission-submit' :'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-submit',
                'resume-submission-read': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-read',
                'resume-submission-readAll': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-readAll',
                'resume-submission-modify': 'gh-domain/gh-resume/gh-resume-api/build/generated-snippets/resume-submission-modify',
                'get-pre-signed-url-for-upload': 'gh-domain/gh-file/gh-file-api/build/generated-snippets/get-pre-signed-url-for-upload',
                'review-write': 'gh-domain/gh-review/gh-review-api/build/generated-snippets/review-write',
                'review-readAll': 'gh-domain/gh-review/gh-review-api/build/generated-snippets/review-readAll',
                'review-readMine': 'gh-domain/gh-review/gh-review-api/build/generated-snippets/review-readMine',
                'recovery-request': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/recovery-request',
                'recovery-confirm': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/recovery-confirm',
                'password-change': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/password-change',
                'profile-get': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-get',
                'profile-image-create': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-image-create',
                'profile-modify-name': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-modify-name',
                'profile-modify-loginId': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-modify-loginId',
                'profile-modify-phoneNumber': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-modify-phoneNumber',
                'profile-modify-email': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-modify-email',
                'profile-modify-password': 'gh-domain/gh-user/gh-user-api/build/generated-snippets/profile-modify-password',
                'facility-like': 'gh-domain/gh-like/gh-like-api/build/generated-snippets/facility-like',
                'facility-unlike': 'gh-domain/gh-like/gh-like-api/build/generated-snippets/facility-unlike',
                'community-entry-generate-invitationLink': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-entry-generate-invitationLink',
                'community-entry-enter': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-entry-enter',
                'community-notice-read': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-notice-read',
                'community-notice-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-notice-write',
                'community-notice-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-notice-update',
                'community-notice-readAll': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-notice-readAll',
                'daily-diet-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-diet-write',
                'daily-diet-read': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-diet-read',
                'daily-diet-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-diet-update',
                'daily-shot-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-shot-write',
                'daily-shot-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-shot-update',
                'daily-shot-read': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-shot-read',
                'daily-medication-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-medication-write',
                'daily-medication-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-medication-update',
                'daily-medication-readByDayOfWeek': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-medication-readByDayOfWeek',
                'daily-rehab-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-rehab-write',
                'daily-rehab-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-rehab-update',
                'daily-rehab-readByDayOfWeek': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/daily-rehab-readByDayOfWeek',
                'community-schedule-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-schedule-write',
                'community-schedule-update': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-schedule-update',
                'community-schedule-readByMonth': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-schedule-readByMonth',
                'community-inquiry-write': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-inquiry-write',
                'community-inquiry-read': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-inquiry-read',
                'community-inquiry-readAll': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-inquiry-readAll',
                'community-user-check': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-user-check',
                'community-read': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-read',
                'community-mine': 'gh-domain/gh-community/gh-community-api/build/generated-snippets/community-mine',
                'question-readAll': 'gh-domain/gh-question/gh-question-api/build/generated-snippets/question-readAll',
                'question-survey': 'gh-domain/gh-question/gh-question-api/build/generated-snippets/question-survey',
                'chat-enter': 'gh-domain/gh-chat/gh-chat-api/build/generated-snippets/chat-enter',
                'chat-get-rooms': 'gh-domain/gh-chat/gh-chat-api/build/generated-snippets/chat-get-rooms',
                'chat-get-messages': 'gh-domain/gh-chat/gh-chat-api/build/generated-snippets/chat-get-messages',
                'notice-write': 'gh-domain/gh-notice/gh-notice-api/build/generated-snippets/notice-write',
                'notice-readAll': 'gh-domain/gh-notice/gh-notice-api/build/generated-snippets/notice-readAll',
                'notice-read': 'gh-domain/gh-notice/gh-notice-api/build/generated-snippets/notice-read'



        sources {
            include '**/index.adoc'
        }

        dependsOn subprojects.test
    }

//    tasks.withType(JavaCompile).configureEach {
//        options.compilerArgs << "-parameters"
//    }


    bootJar.enabled = false
    jar.enabled = false
}



